Handbook all request
